[project]
name = "djangotutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "pip-audit>=2.8.0",
    "pytest-django>=4.10.0",
]

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.0.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-watch>=4.2.0",
    "ruff>=0.9.10",
]
